# android-pdf-search-engine

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_PROVENANCE.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.gradle  consumer-rules.pro  download-official-models.bat  gradle.properties  jitpack.yml  proguard-rules.pro  reset-native-build.bat  settings.gradle  verify-before-jitpack.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
LICENSES/: LLVM-exception.txt  OpenCV-BSD-3-Clause.txt  PDFium-BSD-3-Clause.txt
docs/: ABI_EXPANSION.md  API_STABILITY.md  INTEGRATION.md  NATIVE_COMPATIBILITY.md  OFFICIAL_OCR_MODELS.md  PDFIUM_16K_COMPATIBILITY.md  SAMPLE_PDF.md  TEXT_LAYER_BACKEND.md
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/nless/sandbox/: MainActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: themes.xml
sample/src/main/res/values-night/: themes.xml
src/androidTest/java/com/nless/pdf_search_engine/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  native.cpp  ocr_ppredictor.cpp  ocr_ppredictor.h  pdfium_text_search.cpp
src/main/java/com/nless/pdf_search_engine/androidpdfviewer/: AndroidPdfViewerAdapter.java  PdfOverlaySearchHighlighter.java
src/main/java/com/nless/pdf_search_engine/cache/: OcrDiskCache.java  OcrMemoryCache.java  PdfDocumentFingerprint.java  PdfPageIndexCacheKey.java  PdfPageIndexDiskCache.java  PdfPageIndexMemoryCache.java  PdfSearchCacheKey.java
src/main/java/com/nless/pdf_search_engine/coordinate/: PdfCoordinateConverter.java  PdfPageInfo.java
src/main/java/com/nless/pdf_search_engine/core/: OcrDebugGeometryListener.java  OcrDebugGeometryType.java  OcrDebugRect.java  PdfIndexCallback.java  PdfSearchCacheSource.java  PdfSearchCallback.java  PdfSearchCancelChecker.java  PdfSearchEngine.java  PdfSearchError.java  PdfSearchLibraryInfo.java  PdfSearchManager.java  PdfSearchMode.java  PdfSearchOptions.java  PdfSearchPageError.java  PdfSearchPageMetrics.java  PdfSearchPageOrder.java  PdfSearchPauseChecker.java  PdfSearchProgressInfo.java  PdfSearchProgressListener.java  PdfSearchQueryOptions.java  PdfSearchRect.java  PdfSearchResult.java  PdfSearchResultComparator.java  PdfSearchResultId.java  PdfSearchSession.java  PdfSearchSource.java  PdfSearchSummary.java  PdfSearchVersions.java  PdfTextLayerOcrFallbackPolicy.java
src/main/java/com/nless/pdf_search_engine/index/: OcrLayoutWhitespaceReconstructor.java  PdfDocumentIndex.java  PdfDocumentIndexBuildResult.java  PdfDocumentIndexListener.java  PdfDocumentIndexer.java  PdfNormalizedText.java  PdfPageIndex.java  PdfPageIndexFactory.java  PdfPageIndexSearcher.java  PdfSearchReadingOrder.java  PdfSearchResultDeduplicator.java  PdfTextNormalizer.java  PdfTextToken.java
src/main/java/com/nless/pdf_search_engine/ocr/: OcrDocumentSession.java  OcrPagePlanner.java  OcrPageRenderer.java  OcrPageResult.java  OcrPageSearchListener.java  OcrRenderedPage.java  OcrSearchEngine.java  OcrTextBlock.java
src/main/java/com/nless/pdf_search_engine/paddle/: PaddleOcrEngine.java  PaddleOcrNative.java
src/main/java/com/nless/pdf_search_engine/pdfium/: PdfiumFileCache.java  PdfiumTextIndexChar.java  PdfiumTextIndexExtractor.java  PdfiumTextIndexPage.java  PdfiumTextIndexProtocolParser.java  PdfiumTextIndexReport.java  PdfiumTextNative.java  PdfiumTextPageInfo.java  PdfiumTextProtocolParser.java  PdfiumTextSearchEngine.java  PdfiumTextSearchReport.java  (+1 more)
src/main/res/values/: themes.xml
src/main/res/values-night/: themes.xml
src/test/java/com/nless/pdf_search_engine/: ExampleUnitTest.java  PdfSearchOptionsTest.java  PdfSearchPipelineOptionsTest.java
tools/: check_jitpack_ready.py  check_tag_version.py  jitpack-android-setup.sh  verify_native_libs.py
(+6 files in other folders)
